@@ -7,6 +7,7 @@ ChangeLog
 
 Version 0.113
  Added:
+  - fuseiso ( http://sourceforge.net/projects/fuseiso/ ) full support.
   - QtSingleApp integration. Now you can run only one instance of q4wine-gui;
   - Online documentation;
   - New website: http://q4wine.brezblock.org.ua/;
